src/components/sections/MorphsUnique/style.module.scss
@import '~assets/styles/mixins.scss';
@import '~assets/styles/media.scss';

.container {
  position: relative;
  padding: 0 20px;

  @media screen and (min-width: $desktop) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    @include prtnlSclScrnSize(padding-right, 120);
    @include prtnlSclScrnSize(padding-left, 120);
  }
}

// content
.title {
  font-size: 32px;
  line-height: 120%;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  display: flex;
  flex-wrap: wrap;
  margin-left: 18px;

  @media screen and (min-width: $desktop) {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    font-size: 64px;
    margin-left: 30px;
  }
}

.descrWrapper {
  margin-top: 24px;

  @media screen and (min-width: $desktop){
    margin-top: 30px;
    padding-left: 30px;
  }
}

.paragraph {
  font-family: 'Big Pixel', sans-serif;
  font-style: normal;
  font-weight: 400;
  line-height: 160%;
  font-size: 13px;
  color: #C1C0C0;

  @media screen and (min-width: $desktop){
    font-size: 16px;
    color: #9BA1AA;
  }
}

.descrSection {
  margin-bottom: 11px;

  @media screen and (min-width: $desktop){
    margin-bottom: 50px;
  }
}


// icons
.icons {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 40px;
  gap: 9px;

  @media screen and (min-width: $desktop){
    gap: 18px;
    justify-content: flex-start;
  }
}

.skillImg {
  position: relative;
  width: 57px;
  max-width: 65px;

  @media screen and (min-width: $desktop){
    width: 4.8vw;
    max-width: 76px;
  }

  &.active {
    width: 71px;
    max-width: 76px;

    @media screen and (min-width: $desktop){
      width: 5.7vw;
      max-width: 90px;
    }
  }
}

.fish {
  position: absolute;
  top: -3px;
}

// descr of icons
.skillTitle,
.skillTitleMobile {
  font-family: 'Big Pixel', sans-serif;
  background: linear-gradient(90deg, #FF5D5D 0%, #FF55E4 57.6%, #E36A12 100%), #E312C2;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.skillTitle {
  font-size: 20px;
  margin-bottom: 15px;
}

// morph fro the right
.morphImage {
  display: none;

  @media screen and (min-width: $desktop) {
    display: block;
    width: 100%;
    max-width: 22.53vw;

    border-radius: 30px;
    margin: 0 auto;
  }
}

.mobileMorph {
  position: relative;
  &:after {
    content: '';
    position: absolute;
    height: 240px;
    background-image: url("../../../assets/images/vector4.svg");
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 2;
  }
}

.mobileMorphVideo {
  width: 100%;
}

.skillTitleMobile {
  display: none;
}

.wrapperSkill {
  position: relative;
  align-self: center;
  display: flex;

  width: 4.8vw;
  height: 4.8vw;
}

@media screen and (max-width: $desktop){
  .icons {
    margin-top: 40px;
  }

  .skillTitleMobile {
    position: absolute;
    display: block;
    top: -20px;
    font-size: 8px;
    text-align: center;
    width: 100%;
    letter-spacing: 0.5px;
  }

  $size: 55px;
  $sizeActive: 63px;
  .wrapperSkill {
    width: $size;
    height: $size;
  }

  .skillImg {
    width: $size;
    max-width: $size;

    &.active {
      width: $sizeActive;
      height: $sizeActive;
      max-width: $sizeActive;
    }
  }
  
}

